--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ StatsCompare/obj/Debug/StatsCompare.csproj.FileListAbsolute.txt
 StatsCompare/obj/Debug/StatsCompare.csproj.GenerateResource.Cache
 StatsCompare/obj/Debug/StatsCompare.exe
 StatsCompare/obj/Debug/StatsCompare.pdb
+StatsCompare/bin/Debug/StatsCompare.exe
+StatsCompare/bin/Debug/StatsCompare.pdb
+StatsCompare/obj/Debug/StatsCompare.exe
+StatsCompare/obj/Debug/StatsCompare.pdb
